@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2024 Vaadin Ltd.
+ * Copyright 2000-2025 Vaadin Ltd.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -18,6 +18,7 @@ package com.vaadin.flow.component;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -31,8 +32,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.vaadin.flow.component.internal.ComponentTracker;
-import com.vaadin.flow.i18n.I18NProvider;
 import org.hamcrest.CoreMatchers;
 import org.hamcrest.MatcherAssert;
 import org.junit.After;
@@ -46,6 +45,7 @@ import com.vaadin.flow.component.ScrollOptions.Behavior;
 import com.vaadin.flow.component.dependency.JavaScript;
 import com.vaadin.flow.component.dependency.StyleSheet;
 import com.vaadin.flow.component.dependency.Uses;
+import com.vaadin.flow.component.internal.ComponentTracker;
 import com.vaadin.flow.component.internal.DependencyList;
 import com.vaadin.flow.component.internal.PendingJavaScriptInvocation;
 import com.vaadin.flow.component.internal.UIInternals;
@@ -55,12 +55,14 @@ import com.vaadin.flow.dom.DisabledUpdateMode;
 import com.vaadin.flow.dom.DomEvent;
 import com.vaadin.flow.dom.Element;
 import com.vaadin.flow.dom.ElementFactory;
+import com.vaadin.flow.i18n.I18NProvider;
 import com.vaadin.flow.internal.nodefeature.ElementListenerMap;
 import com.vaadin.flow.server.MockServletServiceSessionSetup;
 import com.vaadin.flow.server.MockVaadinServletService;
 import com.vaadin.flow.server.VaadinSession;
 import com.vaadin.flow.shared.Registration;
 import com.vaadin.flow.shared.ui.Dependency;
+import com.vaadin.tests.util.AlwaysLockedVaadinSession;
 import com.vaadin.tests.util.MockDeploymentConfiguration;
 import com.vaadin.tests.util.MockUI;
 import com.vaadin.tests.util.TestUtil;
@@ -69,7 +71,7 @@ import elemental.json.Json;
 
 public class ComponentTest {
 
-    private UI ui;
+    private UI testUI;
 
     @After
     public void checkThreadLocal() {
@@ -156,7 +158,6 @@ public class ComponentTest {
     private Component child2InputComponent;
     private Component shadowRootParent;
     private Component shadowChild;
-    private UI testUI;
     private MockServletServiceSessionSetup mocks;
     private VaadinSession session;
 
@@ -185,7 +186,7 @@ public class ComponentTest {
         }
     }
 
-    public static abstract class TracksAttachDetachComponent extends Component
+    public abstract static class TracksAttachDetachComponent extends Component
             implements TracksAttachDetach {
 
         private AtomicInteger attachEvents = new AtomicInteger();
@@ -272,9 +273,6 @@ public class ComponentTest {
 
     static class TestComponentContainer extends TestComponent {
 
-        public TestComponentContainer() {
-        }
-
         public void add(Component c) {
             getElement().appendChild(c.getElement());
         }
@@ -285,14 +283,14 @@ public class ComponentTest {
     }
 
     private UI createMockedUI() {
-        UI ui = new UI() {
+        UI mockUI = new UI() {
             @Override
             public VaadinSession getSession() {
                 return session;
             }
         };
-        ui.getInternals().setSession(session);
-        return ui;
+        mockUI.getInternals().setSession(session);
+        return mockUI;
     }
 
     @Before
@@ -311,9 +309,9 @@ public class ComponentTest {
         mocks = new MockServletServiceSessionSetup();
 
         session = mocks.getSession();
-        ui = createMockedUI();
+        testUI = createMockedUI();
 
-        UI.setCurrent(ui);
+        UI.setCurrent(testUI);
     }
 
     @After
@@ -438,8 +436,7 @@ public class ComponentTest {
 
     public static void assertChildren(Component parent,
             Component... expectedChildren) {
-        List<Component> children = parent.getChildren()
-                .collect(Collectors.toList());
+        List<Component> children = parent.getChildren().toList();
         Assert.assertArrayEquals(expectedChildren, children.toArray());
         for (Component c : children) {
             Assert.assertEquals(c.getParent().get(), parent);
@@ -489,20 +486,16 @@ public class ComponentTest {
                 child2.getElement(),
                 new Element("level1b").appendChild(child3.getElement()));
 
-        List<Component> children = parent.getChildren()
-                .collect(Collectors.toList());
         Assert.assertArrayEquals(new Component[] { child1, child2, child3 },
-                children.toArray());
+                parent.getChildren().toArray());
 
     }
 
     @Test
     public void defaultGetChildrenNoChildren() {
-        List<Component> children = parentDivComponent.getChildren()
-                .collect(Collectors.toList());
         Assert.assertArrayEquals(
                 new Component[] { child1SpanComponent, child2InputComponent },
-                children.toArray());
+                parentDivComponent.getChildren().toArray());
 
     }
 
@@ -737,6 +730,75 @@ public class ComponentTest {
     }
 
     @Test
+    public void testDetach_failingListeners_allListenersInvokedAndExceptionHandled() {
+        Set<Throwable> expectedExceptions = new HashSet<>();
+        Set<Throwable> handledExceptions = new HashSet<>();
+        session = new AlwaysLockedVaadinSession(new MockVaadinServletService());
+        session.setErrorHandler(
+                event -> handledExceptions.add(event.getThrowable()));
+        VaadinSession.setCurrent(session);
+        try {
+            UI ui = new UI();
+            TestComponentContainer parent = new TestComponentContainer() {
+                @Override
+                protected void onDetach(DetachEvent detachEvent) {
+                    getDetachEvents().incrementAndGet();
+                    UnsupportedOperationException exception = new UnsupportedOperationException(
+                            "ON-DETACH-1");
+                    expectedExceptions.add(exception);
+                    throw exception;
+                }
+            };
+            TestComponent child = new TestComponent() {
+                @Override
+                protected void onDetach(DetachEvent detachEvent) {
+                    getDetachEvents().incrementAndGet();
+                    UnsupportedOperationException exception = new UnsupportedOperationException(
+                            "ON-DETACH-2");
+                    expectedExceptions.add(exception);
+                    throw exception;
+                }
+            };
+            child.track();
+            parent.track();
+
+            child.addDetachListener(event -> {
+                if (event.getSource() instanceof TracksAttachDetach track) {
+                    track.getDetachEvents().incrementAndGet();
+                }
+                UnsupportedOperationException exception = new UnsupportedOperationException(
+                        "DETACH-LISTENER-1");
+                expectedExceptions.add(exception);
+                throw exception;
+            });
+            parent.addDetachListener(event -> {
+                if (event.getSource() instanceof TracksAttachDetach track) {
+                    track.getDetachEvents().incrementAndGet();
+                }
+                UnsupportedOperationException exception = new UnsupportedOperationException(
+                        "DETACH-LISTENER-2");
+                expectedExceptions.add(exception);
+                throw exception;
+            });
+
+            parent.add(child);
+            ui.add(parent);
+
+            child.assertDetachEvents(0);
+            parent.assertDetachEvents(0);
+
+            ui.remove(parent);
+
+            child.assertDetachEvents(3);
+            parent.assertDetachEvents(3);
+
+            Assert.assertEquals(expectedExceptions, handledExceptions);
+        } finally {
+            VaadinSession.setCurrent(null);
+        }
+    }
+
+    @Test
     public void testAttachDetach_elementMoved_bothEventsTriggered() {
         UI ui = new UI();
         TestComponentContainer parent = new TestComponentContainer();
@@ -836,8 +898,9 @@ public class ComponentTest {
         });
 
         MockDeploymentConfiguration config = new MockDeploymentConfiguration();
-        ui.getInternals().setSession(
-                new VaadinSession(new MockVaadinServletService(config)));
+        session = new AlwaysLockedVaadinSession(
+                new MockVaadinServletService(config));
+        ui.getInternals().setSession(session);
         Assert.assertTrue(initialAttach.get());
         // UI is never detached and reattached
     }
@@ -1386,7 +1449,7 @@ public class ComponentTest {
     @Test // 3818
     public void enabledStateChangeOnAttachCalledForParentState() {
         enabledStateChangeOnAttachCalledForParentState(false,
-                (parent, child) -> parent.add(child));
+                HasComponents::add);
     }
 
     @Test // 7085
@@ -1460,8 +1523,7 @@ public class ComponentTest {
 
     @Test
     public void enabledStateChangeOnParentDetachReturnsOldState() {
-        enabledStateChangeOnParentDetachReturnsOldState(
-                (parent, child) -> parent.add(child));
+        enabledStateChangeOnParentDetachReturnsOldState(HasComponents::add);
     }
 
     @Test
@@ -1769,15 +1831,15 @@ public class ComponentTest {
     }
 
     @Test
-    public void getTranslation_delegateToDeprecated() {
+    public void getTranslation_deprecated_delegatesToActualImplementation() {
         Component component = Mockito.mock(Component.class);
         Mockito.doCallRealMethod().when(component).getTranslation(
-                Mockito.any(Locale.class), Mockito.anyString(),
+                Mockito.anyString(), Mockito.any(Locale.class),
                 Mockito.any(Object[].class));
 
-        component.getTranslation(Locale.GERMAN, "foo");
+        component.getTranslation("foo", Locale.GERMAN);
 
-        Mockito.verify(component).getTranslation("foo", Locale.GERMAN);
+        Mockito.verify(component).getTranslation(Locale.GERMAN, "foo");
     }
 
     @Test
@@ -1897,16 +1959,17 @@ public class ComponentTest {
     @Test
     public void scrollIntoView() {
         EnabledDiv div = new EnabledDiv();
-        ui.add(div);
+        testUI.add(div);
         div.scrollIntoView();
 
         assertPendingJs("scrollIntoView()");
     }
 
     private void assertPendingJs(String expectedJs) {
-        ui.getInternals().getStateTree().runExecutionsBeforeClientResponse();
+        testUI.getInternals().getStateTree()
+                .runExecutionsBeforeClientResponse();
 
-        List<PendingJavaScriptInvocation> pendingJs = ui.getInternals()
+        List<PendingJavaScriptInvocation> pendingJs = testUI.getInternals()
                 .dumpPendingJavaScriptInvocations();
         Assert.assertEquals(1, pendingJs.size());
         JavaScriptInvocation inv = pendingJs.get(0).getInvocation();
@@ -1917,7 +1980,7 @@ public class ComponentTest {
     @Test
     public void scrollIntoViewSmooth() {
         EnabledDiv div = new EnabledDiv();
-        ui.add(div);
+        testUI.add(div);
         div.scrollIntoView(new ScrollOptions(Behavior.SMOOTH));
 
         assertPendingJs("scrollIntoView({\"behavior\":\"smooth\"})");
@@ -1926,7 +1989,7 @@ public class ComponentTest {
     @Test
     public void scrollIntoViewAllParams() {
         EnabledDiv div = new EnabledDiv();
-        ui.add(div);
+        testUI.add(div);
         div.scrollIntoView(new ScrollOptions(Behavior.SMOOTH, Alignment.END,
                 Alignment.CENTER));
 
@@ -1942,7 +2005,7 @@ public class ComponentTest {
         otherUI.add(button);
 
         IllegalStateException ex = Assert.assertThrows(
-                IllegalStateException.class, () -> ui.add(button));
+                IllegalStateException.class, () -> testUI.add(button));
         Assert.assertTrue(ex.getMessage(), ex.getMessage().startsWith(
                 "Can't move a node from one state tree to another. If this is "
                         + "intentional, first remove the node from its current "
